--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
@@ -112,8 +112,11 @@
                                                 @locationAddress.NumberOfPositions
                                             </td>
                                             <td class="location-offline-urls">
-                                                @Html.Hidden("LocationAddresses[" + i + "].VacancyLocationId", locationAddress.VacancyLocationId)
-                                                @Html.TextBox("LocationAddresses[" + i + "].OfflineApplicationUrl", locationAddress.OfflineApplicationUrl, new { @class = "width-all-1-1 form-control", type = "text", size = 12 })
+                                                <div class="@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType("LocationAddresses[" + i + "].OfflineApplicationUrl")))">
+                                                    @Html.Hidden("LocationAddresses[" + i + "].VacancyLocationId", locationAddress.VacancyLocationId)
+                                                    @Html.TextBox("LocationAddresses[" + i + "].OfflineApplicationUrl", locationAddress.OfflineApplicationUrl, new {@class = "width-all-1-1 form-control", type = "text", size = 12})
+                                                    @Html.ValidationMessage("LocationAddresses[" + i + "].OfflineApplicationUrl")
+                                                </div>
                                             </td>
                                         </tr>
                                     }
