ra-317: Implement code review changes.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
@@ -16,7 +16,7 @@
                     <div class="blocklabel-single-container">@reason</div>
                     <br />
                     <span class="form-prepopped font-xsmall">
-                        Sent @Model.DateUpdated.ToString("dd MMM yyyy")
+                        Sent @Model.UnsuccessfulDateTime.ToString("dd MMM yyyy")
                     </span>
                 </div>
             </div>
