--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -24,7 +24,7 @@
         <h2 class="heading-medium">What feedback would you like to share with the candidate?</h2>
 
         @Html.FormTextAreaFor(
-                m => m.CandidateApplicationFeedback,
+                m => m.UnSuccessfulReason,
                 containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
                 controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
 
