ra-318: Change text on Archive page when outstanding actions exists.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -21,3 +21,9 @@
         @Html.RouteLink("Archive vacancy", RecruitmentRouteNames.ArchiveVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
     </p>
 }
+@if (Model.Status.CanBulkDecline(Model.TotalNumberOfApplications))
+{
+    <p class="small-btm-margin">
+        @Html.RouteLink("Respond to candidates", RecruitmentRouteNames.ArchiveVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+    </p>
+}
