RA-79: Supporting multiple urls on manage

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/BasicDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/BasicDetails.cshtml
@@ -6,7 +6,7 @@
 
 @using (Html.BeginRouteForm(ManagementRouteNames.BasicDetails, FormMethod.Post))
 {
-    @Html.DisplayFor(m => m, NewVacancyViewModel.PartialView)
+    @Html.DisplayFor(m => m, NewVacancyViewModel.PartialView, new {OfflineUrlButtonName = "BasicDetails"})
 
     <div class="form-group">
         <button type="submit" class="button">Save</button>
